// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Favorite Page should render favorite movie when data is not null 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        style="padding: 10px 20px;"
      >
        <div
          class="ant-card ant-card-bordered"
          style="min-height: 75vh;"
        >
          <div
            class="ant-card-head"
          >
            <div
              class="ant-card-head-wrapper"
            >
              <div
                class="ant-card-head-title"
              >
                Favorite Movie
              </div>
            </div>
          </div>
          <div
            class="ant-card-body"
          >
            <div
              class="ant-row ant-row-center"
              data-testid="favorite-list"
              style="margin: -2.5px -2.5px 2.5px -2.5px;"
            >
              <div
                class="ant-col ant-col-xs-11 ant-col-sm-7 ant-col-md-6 ant-col-lg-6 ant-col-xl-4 ant-col-xxl-3"
                style="padding: 2.5px 2.5px 2.5px 2.5px;"
              >
                <div
                  style="min-width: 5rem; max-width: 11rem; position: relative;"
                >
                  <button
                    class="ant-btn ant-btn-primary ant-btn-icon-only ant-btn-dangerous"
                    data-testid="favorite-button-test"
                    style="display: block; position: absolute; z-index: 1;"
                    type="button"
                  >
                    <span
                      aria-label="heart"
                      class="anticon anticon-heart"
                      role="img"
                      style="color: white;"
                    >
                      <svg
                        aria-hidden="true"
                        class=""
                        data-icon="heart"
                        fill="currentColor"
                        focusable="false"
                        height="1em"
                        viewBox="64 64 896 896"
                        width="1em"
                      >
                        <path
                          d="M923 283.6a260.04 260.04 0 00-56.9-82.8 264.4 264.4 0 00-84-55.5A265.34 265.34 0 00679.7 125c-49.3 0-97.4 13.5-139.2 39-10 6.1-19.5 12.8-28.5 20.1-9-7.3-18.5-14-28.5-20.1-41.8-25.5-89.9-39-139.2-39-35.5 0-69.9 6.8-102.4 20.3-31.4 13-59.7 31.7-84 55.5a258.44 258.44 0 00-56.9 82.8c-13.9 32.3-21 66.6-21 101.9 0 33.3 6.8 68 20.3 103.3 11.3 29.5 27.5 60.1 48.2 91 32.8 48.9 77.9 99.9 133.9 151.6 92.8 85.7 184.7 144.9 188.6 147.3l23.7 15.2c10.5 6.7 24 6.7 34.5 0l23.7-15.2c3.9-2.5 95.7-61.6 188.6-147.3 56-51.7 101.1-102.7 133.9-151.6 20.7-30.9 37-61.5 48.2-91 13.5-35.3 20.3-70 20.3-103.3.1-35.3-7-69.6-20.9-101.9z"
                        />
                      </svg>
                    </span>
                  </button>
                  <a
                    href="/movie/1"
                  >
                    <div
                      class="ant-card ant-card-bordered ant-card-hoverable"
                    >
                      <div
                        class="ant-card-cover"
                      >
                        <img
                          alt="movie-poster"
                          src="https://image.tmdb.org/t/p/w500test_poster"
                          style="filter: none;"
                        />
                      </div>
                      <div
                        class="ant-card-body"
                      >
                        <div
                          class="ant-card-meta"
                        >
                          <div
                            class="ant-card-meta-detail"
                          >
                            <div
                              class="ant-card-meta-title"
                            >
                              test
                            </div>
                          </div>
                        </div>
                        <ul
                          class="ant-rate ant-rate-disabled"
                          role="radiogroup"
                          style="max-width: 80px;"
                          tabindex="-1"
                        >
                          <li
                            class="ant-rate-star ant-rate-star-full"
                          >
                            <div
                              aria-checked="true"
                              aria-posinset="1"
                              aria-setsize="5"
                              role="radio"
                              tabindex="-1"
                            >
                              <div
                                class="ant-rate-star-first"
                              >
                                <span
                                  aria-label="star"
                                  class="anticon anticon-star"
                                  role="img"
                                  style="max-width: 8px; min-width: 2px;"
                                >
                                  <svg
                                    aria-hidden="true"
                                    class=""
                                    data-icon="star"
                                    fill="currentColor"
                                    focusable="false"
                                    height="1em"
                                    viewBox="64 64 896 896"
                                    width="1em"
                                  >
                                    <path
                                      d="M908.1 353.1l-253.9-36.9L540.7 86.1c-3.1-6.3-8.2-11.4-14.5-14.5-15.8-7.8-35-1.3-42.9 14.5L369.8 316.2l-253.9 36.9c-7 1-13.4 4.3-18.3 9.3a32.05 32.05 0 00.6 45.3l183.7 179.1-43.4 252.9a31.95 31.95 0 0046.4 33.7L512 754l227.1 119.4c6.2 3.3 13.4 4.4 20.3 3.2 17.4-3 29.1-19.5 26.1-36.9l-43.4-252.9 183.7-179.1c5-4.9 8.3-11.3 9.3-18.3 2.7-17.5-9.5-33.7-27-36.3z"
                                    />
                                  </svg>
                                </span>
                              </div>
                              <div
                                class="ant-rate-star-second"
                              >
                                <span
                                  aria-label="star"
                                  class="anticon anticon-star"
                                  role="img"
                                  style="max-width: 8px; min-width: 2px;"
                                >
                                  <svg
                                    aria-hidden="true"
                                    class=""
                                    data-icon="star"
                                    fill="currentColor"
                                    focusable="false"
                                    height="1em"
                                    viewBox="64 64 896 896"
                                    width="1em"
                                  >
                                    <path
                                      d="M908.1 353.1l-253.9-36.9L540.7 86.1c-3.1-6.3-8.2-11.4-14.5-14.5-15.8-7.8-35-1.3-42.9 14.5L369.8 316.2l-253.9 36.9c-7 1-13.4 4.3-18.3 9.3a32.05 32.05 0 00.6 45.3l183.7 179.1-43.4 252.9a31.95 31.95 0 0046.4 33.7L512 754l227.1 119.4c6.2 3.3 13.4 4.4 20.3 3.2 17.4-3 29.1-19.5 26.1-36.9l-43.4-252.9 183.7-179.1c5-4.9 8.3-11.3 9.3-18.3 2.7-17.5-9.5-33.7-27-36.3z"
                                    />
                                  </svg>
                                </span>
                              </div>
                            </div>
                          </li>
                          <li
                            class="ant-rate-star ant-rate-star-full"
                          >
                            <div
                              aria-checked="true"
                              aria-posinset="2"
                              aria-setsize="5"
                              role="radio"
                              tabindex="-1"
                            >
                              <div
                                class="ant-rate-star-first"
                              >
                                <span
                                  aria-label="star"
                                  class="anticon anticon-star"
                                  role="img"
                                  style="max-width: 8px; min-width: 2px;"
                                >
                                  <svg
                                    aria-hidden="true"
                                    class=""
                                    data-icon="star"
                                    fill="currentColor"
                                    focusable="false"
                                    height="1em"
                                    viewBox="64 64 896 896"
                                    width="1em"
                                  >
                                    <path
                                      d="M908.1 353.1l-253.9-36.9L540.7 86.1c-3.1-6.3-8.2-11.4-14.5-14.5-15.8-7.8-35-1.3-42.9 14.5L369.8 316.2l-253.9 36.9c-7 1-13.4 4.3-18.3 9.3a32.05 32.05 0 00.6 45.3l183.7 179.1-43.4 252.9a31.95 31.95 0 0046.4 33.7L512 754l227.1 119.4c6.2 3.3 13.4 4.4 20.3 3.2 17.4-3 29.1-19.5 26.1-36.9l-43.4-252.9 183.7-179.1c5-4.9 8.3-11.3 9.3-18.3 2.7-17.5-9.5-33.7-27-36.3z"
                                    />
                                  </svg>
                                </span>
                              </div>
                              <div
                                class="ant-rate-star-second"
                              >
                                <span
                                  aria-label="star"
                                  class="anticon anticon-star"
                                  role="img"
                                  style="max-width: 8px; min-width: 2px;"
                                >
                                  <svg
                                    aria-hidden="true"
                                    class=""
                                    data-icon="star"
                                    fill="currentColor"
                                    focusable="false"
                                    height="1em"
                                    viewBox="64 64 896 896"
                                    width="1em"
                                  >
                                    <path
                                      d="M908.1 353.1l-253.9-36.9L540.7 86.1c-3.1-6.3-8.2-11.4-14.5-14.5-15.8-7.8-35-1.3-42.9 14.5L369.8 316.2l-253.9 36.9c-7 1-13.4 4.3-18.3 9.3a32.05 32.05 0 00.6 45.3l183.7 179.1-43.4 252.9a31.95 31.95 0 0046.4 33.7L512 754l227.1 119.4c6.2 3.3 13.4 4.4 20.3 3.2 17.4-3 29.1-19.5 26.1-36.9l-43.4-252.9 183.7-179.1c5-4.9 8.3-11.3 9.3-18.3 2.7-17.5-9.5-33.7-27-36.3z"
                                    />
                                  </svg>
                                </span>
                              </div>
                            </div>
                          </li>
                          <li
                            class="ant-rate-star ant-rate-star-full"
                          >
                            <div
                              aria-checked="true"
                              aria-posinset="3"
                              aria-setsize="5"
                              role="radio"
                              tabindex="-1"
                            >
                              <div
                                class="ant-rate-star-first"
                              >
                                <span
                                  aria-label="star"
                                  class="anticon anticon-star"
                                  role="img"
                                  style="max-width: 8px; min-width: 2px;"
                                >
                                  <svg
                                    aria-hidden="true"
                                    class=""
                                    data-icon="star"
                                    fill="currentColor"
                                    focusable="false"
                                    height="1em"
                                    viewBox="64 64 896 896"
                                    width="1em"
                                  >
                                    <path
                                      d="M908.1 353.1l-253.9-36.9L540.7 86.1c-3.1-6.3-8.2-11.4-14.5-14.5-15.8-7.8-35-1.3-42.9 14.5L369.8 316.2l-253.9 36.9c-7 1-13.4 4.3-18.3 9.3a32.05 32.05 0 00.6 45.3l183.7 179.1-43.4 252.9a31.95 31.95 0 0046.4 33.7L512 754l227.1 119.4c6.2 3.3 13.4 4.4 20.3 3.2 17.4-3 29.1-19.5 26.1-36.9l-43.4-252.9 183.7-179.1c5-4.9 8.3-11.3 9.3-18.3 2.7-17.5-9.5-33.7-27-36.3z"
                                    />
                                  </svg>
                                </span>
                              </div>
                              <div
                                class="ant-rate-star-second"
                              >
                                <span
                                  aria-label="star"
                                  class="anticon anticon-star"
                                  role="img"
                                  style="max-width: 8px; min-width: 2px;"
                                >
                                  <svg
                                    aria-hidden="true"
                                    class=""
                                    data-icon="star"
                                    fill="currentColor"
                                    focusable="false"
                                    height="1em"
                                    viewBox="64 64 896 896"
                                    width="1em"
                                  >
                                    <path
                                      d="M908.1 353.1l-253.9-36.9L540.7 86.1c-3.1-6.3-8.2-11.4-14.5-14.5-15.8-7.8-35-1.3-42.9 14.5L369.8 316.2l-253.9 36.9c-7 1-13.4 4.3-18.3 9.3a32.05 32.05 0 00.6 45.3l183.7 179.1-43.4 252.9a31.95 31.95 0 0046.4 33.7L512 754l227.1 119.4c6.2 3.3 13.4 4.4 20.3 3.2 17.4-3 29.1-19.5 26.1-36.9l-43.4-252.9 183.7-179.1c5-4.9 8.3-11.3 9.3-18.3 2.7-17.5-9.5-33.7-27-36.3z"
                                    />
                                  </svg>
                                </span>
                              </div>
                            </div>
                          </li>
                          <li
                            class="ant-rate-star ant-rate-star-full"
                          >
                            <div
                              aria-checked="true"
                              aria-posinset="4"
                              aria-setsize="5"
                              role="radio"
                              tabindex="-1"
                            >
                              <div
                                class="ant-rate-star-first"
                              >
                                <span
                                  aria-label="star"
                                  class="anticon anticon-star"
                                  role="img"
                                  style="max-width: 8px; min-width: 2px;"
                                >
                                  <svg
                                    aria-hidden="true"
                                    class=""
                                    data-icon="star"
                                    fill="currentColor"
                                    focusable="false"
                                    height="1em"
                                    viewBox="64 64 896 896"
                                    width="1em"
                                  >
                                    <path
                                      d="M908.1 353.1l-253.9-36.9L540.7 86.1c-3.1-6.3-8.2-11.4-14.5-14.5-15.8-7.8-35-1.3-42.9 14.5L369.8 316.2l-253.9 36.9c-7 1-13.4 4.3-18.3 9.3a32.05 32.05 0 00.6 45.3l183.7 179.1-43.4 252.9a31.95 31.95 0 0046.4 33.7L512 754l227.1 119.4c6.2 3.3 13.4 4.4 20.3 3.2 17.4-3 29.1-19.5 26.1-36.9l-43.4-252.9 183.7-179.1c5-4.9 8.3-11.3 9.3-18.3 2.7-17.5-9.5-33.7-27-36.3z"
                                    />
                                  </svg>
                                </span>
                              </div>
                              <div
                                class="ant-rate-star-second"
                              >
                                <span
                                  aria-label="star"
                                  class="anticon anticon-star"
                                  role="img"
                                  style="max-width: 8px; min-width: 2px;"
                                >
                                  <svg
                                    aria-hidden="true"
                                    class=""
                                    data-icon="star"
                                    fill="currentColor"
                                    focusable="false"
                                    height="1em"
                                    viewBox="64 64 896 896"
                                    width="1em"
                                  >
                                    <path
                                      d="M908.1 353.1l-253.9-36.9L540.7 86.1c-3.1-6.3-8.2-11.4-14.5-14.5-15.8-7.8-35-1.3-42.9 14.5L369.8 316.2l-253.9 36.9c-7 1-13.4 4.3-18.3 9.3a32.05 32.05 0 00.6 45.3l183.7 179.1-43.4 252.9a31.95 31.95 0 0046.4 33.7L512 754l227.1 119.4c6.2 3.3 13.4 4.4 20.3 3.2 17.4-3 29.1-19.5 26.1-36.9l-43.4-252.9 183.7-179.1c5-4.9 8.3-11.3 9.3-18.3 2.7-17.5-9.5-33.7-27-36.3z"
                                    />
                                  </svg>
                                </span>
                              </div>
                            </div>
                          </li>
                          <li
                            class="ant-rate-star ant-rate-star-zero"
                          >
                            <div
                              aria-checked="true"
                              aria-posinset="5"
                              aria-setsize="5"
                              role="radio"
                              tabindex="-1"
                            >
                              <div
                                class="ant-rate-star-first"
                              >
                                <span
                                  aria-label="star"
                                  class="anticon anticon-star"
                                  role="img"
                                  style="max-width: 8px; min-width: 2px;"
                                >
                                  <svg
                                    aria-hidden="true"
                                    class=""
                                    data-icon="star"
                                    fill="currentColor"
                                    focusable="false"
                                    height="1em"
                                    viewBox="64 64 896 896"
                                    width="1em"
                                  >
                                    <path
                                      d="M908.1 353.1l-253.9-36.9L540.7 86.1c-3.1-6.3-8.2-11.4-14.5-14.5-15.8-7.8-35-1.3-42.9 14.5L369.8 316.2l-253.9 36.9c-7 1-13.4 4.3-18.3 9.3a32.05 32.05 0 00.6 45.3l183.7 179.1-43.4 252.9a31.95 31.95 0 0046.4 33.7L512 754l227.1 119.4c6.2 3.3 13.4 4.4 20.3 3.2 17.4-3 29.1-19.5 26.1-36.9l-43.4-252.9 183.7-179.1c5-4.9 8.3-11.3 9.3-18.3 2.7-17.5-9.5-33.7-27-36.3z"
                                    />
                                  </svg>
                                </span>
                              </div>
                              <div
                                class="ant-rate-star-second"
                              >
                                <span
                                  aria-label="star"
                                  class="anticon anticon-star"
                                  role="img"
                                  style="max-width: 8px; min-width: 2px;"
                                >
                                  <svg
                                    aria-hidden="true"
                                    class=""
                                    data-icon="star"
                                    fill="currentColor"
                                    focusable="false"
                                    height="1em"
                                    viewBox="64 64 896 896"
                                    width="1em"
                                  >
                                    <path
                                      d="M908.1 353.1l-253.9-36.9L540.7 86.1c-3.1-6.3-8.2-11.4-14.5-14.5-15.8-7.8-35-1.3-42.9 14.5L369.8 316.2l-253.9 36.9c-7 1-13.4 4.3-18.3 9.3a32.05 32.05 0 00.6 45.3l183.7 179.1-43.4 252.9a31.95 31.95 0 0046.4 33.7L512 754l227.1 119.4c6.2 3.3 13.4 4.4 20.3 3.2 17.4-3 29.1-19.5 26.1-36.9l-43.4-252.9 183.7-179.1c5-4.9 8.3-11.3 9.3-18.3 2.7-17.5-9.5-33.7-27-36.3z"
                                    />
                                  </svg>
                                </span>
                              </div>
                            </div>
                          </li>
                        </ul>
                      </div>
                    </div>
                  </a>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      style="padding: 10px 20px;"
    >
      <div
        class="ant-card ant-card-bordered"
        style="min-height: 75vh;"
      >
        <div
          class="ant-card-head"
        >
          <div
            class="ant-card-head-wrapper"
          >
            <div
              class="ant-card-head-title"
            >
              Favorite Movie
            </div>
          </div>
        </div>
        <div
          class="ant-card-body"
        >
          <div
            class="ant-row ant-row-center"
            data-testid="favorite-list"
            style="margin: -2.5px -2.5px 2.5px -2.5px;"
          >
            <div
              class="ant-col ant-col-xs-11 ant-col-sm-7 ant-col-md-6 ant-col-lg-6 ant-col-xl-4 ant-col-xxl-3"
              style="padding: 2.5px 2.5px 2.5px 2.5px;"
            >
              <div
                style="min-width: 5rem; max-width: 11rem; position: relative;"
              >
                <button
                  class="ant-btn ant-btn-primary ant-btn-icon-only ant-btn-dangerous"
                  data-testid="favorite-button-test"
                  style="display: block; position: absolute; z-index: 1;"
                  type="button"
                >
                  <span
                    aria-label="heart"
                    class="anticon anticon-heart"
                    role="img"
                    style="color: white;"
                  >
                    <svg
                      aria-hidden="true"
                      class=""
                      data-icon="heart"
                      fill="currentColor"
                      focusable="false"
                      height="1em"
                      viewBox="64 64 896 896"
                      width="1em"
                    >
                      <path
                        d="M923 283.6a260.04 260.04 0 00-56.9-82.8 264.4 264.4 0 00-84-55.5A265.34 265.34 0 00679.7 125c-49.3 0-97.4 13.5-139.2 39-10 6.1-19.5 12.8-28.5 20.1-9-7.3-18.5-14-28.5-20.1-41.8-25.5-89.9-39-139.2-39-35.5 0-69.9 6.8-102.4 20.3-31.4 13-59.7 31.7-84 55.5a258.44 258.44 0 00-56.9 82.8c-13.9 32.3-21 66.6-21 101.9 0 33.3 6.8 68 20.3 103.3 11.3 29.5 27.5 60.1 48.2 91 32.8 48.9 77.9 99.9 133.9 151.6 92.8 85.7 184.7 144.9 188.6 147.3l23.7 15.2c10.5 6.7 24 6.7 34.5 0l23.7-15.2c3.9-2.5 95.7-61.6 188.6-147.3 56-51.7 101.1-102.7 133.9-151.6 20.7-30.9 37-61.5 48.2-91 13.5-35.3 20.3-70 20.3-103.3.1-35.3-7-69.6-20.9-101.9z"
                      />
                    </svg>
                  </span>
                </button>
                <a
                  href="/movie/1"
                >
                  <div
                    class="ant-card ant-card-bordered ant-card-hoverable"
                  >
                    <div
                      class="ant-card-cover"
                    >
                      <img
                        alt="movie-poster"
                        src="https://image.tmdb.org/t/p/w500test_poster"
                        style="filter: none;"
                      />
                    </div>
                    <div
                      class="ant-card-body"
                    >
                      <div
                        class="ant-card-meta"
                      >
                        <div
                          class="ant-card-meta-detail"
                        >
                          <div
                            class="ant-card-meta-title"
                          >
                            test
                          </div>
                        </div>
                      </div>
                      <ul
                        class="ant-rate ant-rate-disabled"
                        role="radiogroup"
                        style="max-width: 80px;"
                        tabindex="-1"
                      >
                        <li
                          class="ant-rate-star ant-rate-star-full"
                        >
                          <div
                            aria-checked="true"
                            aria-posinset="1"
                            aria-setsize="5"
                            role="radio"
                            tabindex="-1"
                          >
                            <div
                              class="ant-rate-star-first"
                            >
                              <span
                                aria-label="star"
                                class="anticon anticon-star"
                                role="img"
                                style="max-width: 8px; min-width: 2px;"
                              >
                                <svg
                                  aria-hidden="true"
                                  class=""
                                  data-icon="star"
                                  fill="currentColor"
                                  focusable="false"
                                  height="1em"
                                  viewBox="64 64 896 896"
                                  width="1em"
                                >
                                  <path
                                    d="M908.1 353.1l-253.9-36.9L540.7 86.1c-3.1-6.3-8.2-11.4-14.5-14.5-15.8-7.8-35-1.3-42.9 14.5L369.8 316.2l-253.9 36.9c-7 1-13.4 4.3-18.3 9.3a32.05 32.05 0 00.6 45.3l183.7 179.1-43.4 252.9a31.95 31.95 0 0046.4 33.7L512 754l227.1 119.4c6.2 3.3 13.4 4.4 20.3 3.2 17.4-3 29.1-19.5 26.1-36.9l-43.4-252.9 183.7-179.1c5-4.9 8.3-11.3 9.3-18.3 2.7-17.5-9.5-33.7-27-36.3z"
                                  />
                                </svg>
                              </span>
                            </div>
                            <div
                              class="ant-rate-star-second"
                            >
                              <span
                                aria-label="star"
                                class="anticon anticon-star"
                                role="img"
                                style="max-width: 8px; min-width: 2px;"
                              >
                                <svg
                                  aria-hidden="true"
                                  class=""
                                  data-icon="star"
                                  fill="currentColor"
                                  focusable="false"
                                  height="1em"
                                  viewBox="64 64 896 896"
                                  width="1em"
                                >
                                  <path
                                    d="M908.1 353.1l-253.9-36.9L540.7 86.1c-3.1-6.3-8.2-11.4-14.5-14.5-15.8-7.8-35-1.3-42.9 14.5L369.8 316.2l-253.9 36.9c-7 1-13.4 4.3-18.3 9.3a32.05 32.05 0 00.6 45.3l183.7 179.1-43.4 252.9a31.95 31.95 0 0046.4 33.7L512 754l227.1 119.4c6.2 3.3 13.4 4.4 20.3 3.2 17.4-3 29.1-19.5 26.1-36.9l-43.4-252.9 183.7-179.1c5-4.9 8.3-11.3 9.3-18.3 2.7-17.5-9.5-33.7-27-36.3z"
                                  />
                                </svg>
                              </span>
                            </div>
                          </div>
                        </li>
                        <li
                          class="ant-rate-star ant-rate-star-full"
                        >
                          <div
                            aria-checked="true"
                            aria-posinset="2"
                            aria-setsize="5"
                            role="radio"
                            tabindex="-1"
                          >
                            <div
                              class="ant-rate-star-first"
                            >
                              <span
                                aria-label="star"
                                class="anticon anticon-star"
                                role="img"
                                style="max-width: 8px; min-width: 2px;"
                              >
                                <svg
                                  aria-hidden="true"
                                  class=""
                                  data-icon="star"
                                  fill="currentColor"
                                  focusable="false"
                                  height="1em"
                                  viewBox="64 64 896 896"
                                  width="1em"
                                >
                                  <path
                                    d="M908.1 353.1l-253.9-36.9L540.7 86.1c-3.1-6.3-8.2-11.4-14.5-14.5-15.8-7.8-35-1.3-42.9 14.5L369.8 316.2l-253.9 36.9c-7 1-13.4 4.3-18.3 9.3a32.05 32.05 0 00.6 45.3l183.7 179.1-43.4 252.9a31.95 31.95 0 0046.4 33.7L512 754l227.1 119.4c6.2 3.3 13.4 4.4 20.3 3.2 17.4-3 29.1-19.5 26.1-36.9l-43.4-252.9 183.7-179.1c5-4.9 8.3-11.3 9.3-18.3 2.7-17.5-9.5-33.7-27-36.3z"
                                  />
                                </svg>
                              </span>
                            </div>
                            <div
                              class="ant-rate-star-second"
                            >
                              <span
                                aria-label="star"
                                class="anticon anticon-star"
                                role="img"
                                style="max-width: 8px; min-width: 2px;"
                              >
                                <svg
                                  aria-hidden="true"
                                  class=""
                                  data-icon="star"
                                  fill="currentColor"
                                  focusable="false"
                                  height="1em"
                                  viewBox="64 64 896 896"
                                  width="1em"
                                >
                                  <path
                                    d="M908.1 353.1l-253.9-36.9L540.7 86.1c-3.1-6.3-8.2-11.4-14.5-14.5-15.8-7.8-35-1.3-42.9 14.5L369.8 316.2l-253.9 36.9c-7 1-13.4 4.3-18.3 9.3a32.05 32.05 0 00.6 45.3l183.7 179.1-43.4 252.9a31.95 31.95 0 0046.4 33.7L512 754l227.1 119.4c6.2 3.3 13.4 4.4 20.3 3.2 17.4-3 29.1-19.5 26.1-36.9l-43.4-252.9 183.7-179.1c5-4.9 8.3-11.3 9.3-18.3 2.7-17.5-9.5-33.7-27-36.3z"
                                  />
                                </svg>
                              </span>
                            </div>
                          </div>
                        </li>
                        <li
                          class="ant-rate-star ant-rate-star-full"
                        >
                          <div
                            aria-checked="true"
                            aria-posinset="3"
                            aria-setsize="5"
                            role="radio"
                            tabindex="-1"
                          >
                            <div
                              class="ant-rate-star-first"
                            >
                              <span
                                aria-label="star"
                                class="anticon anticon-star"
                                role="img"
                                style="max-width: 8px; min-width: 2px;"
                              >
                                <svg
                                  aria-hidden="true"
                                  class=""
                                  data-icon="star"
                                  fill="currentColor"
                                  focusable="false"
                                  height="1em"
                                  viewBox="64 64 896 896"
                                  width="1em"
                                >
                                  <path
                                    d="M908.1 353.1l-253.9-36.9L540.7 86.1c-3.1-6.3-8.2-11.4-14.5-14.5-15.8-7.8-35-1.3-42.9 14.5L369.8 316.2l-253.9 36.9c-7 1-13.4 4.3-18.3 9.3a32.05 32.05 0 00.6 45.3l183.7 179.1-43.4 252.9a31.95 31.95 0 0046.4 33.7L512 754l227.1 119.4c6.2 3.3 13.4 4.4 20.3 3.2 17.4-3 29.1-19.5 26.1-36.9l-43.4-252.9 183.7-179.1c5-4.9 8.3-11.3 9.3-18.3 2.7-17.5-9.5-33.7-27-36.3z"
                                  />
                                </svg>
                              </span>
                            </div>
                            <div
                              class="ant-rate-star-second"
                            >
                              <span
                                aria-label="star"
                                class="anticon anticon-star"
                                role="img"
                                style="max-width: 8px; min-width: 2px;"
                              >
                                <svg
                                  aria-hidden="true"
                                  class=""
                                  data-icon="star"
                                  fill="currentColor"
                                  focusable="false"
                                  height="1em"
                                  viewBox="64 64 896 896"
                                  width="1em"
                                >
                                  <path
                                    d="M908.1 353.1l-253.9-36.9L540.7 86.1c-3.1-6.3-8.2-11.4-14.5-14.5-15.8-7.8-35-1.3-42.9 14.5L369.8 316.2l-253.9 36.9c-7 1-13.4 4.3-18.3 9.3a32.05 32.05 0 00.6 45.3l183.7 179.1-43.4 252.9a31.95 31.95 0 0046.4 33.7L512 754l227.1 119.4c6.2 3.3 13.4 4.4 20.3 3.2 17.4-3 29.1-19.5 26.1-36.9l-43.4-252.9 183.7-179.1c5-4.9 8.3-11.3 9.3-18.3 2.7-17.5-9.5-33.7-27-36.3z"
                                  />
                                </svg>
                              </span>
                            </div>
                          </div>
                        </li>
                        <li
                          class="ant-rate-star ant-rate-star-full"
                        >
                          <div
                            aria-checked="true"
                            aria-posinset="4"
                            aria-setsize="5"
                            role="radio"
                            tabindex="-1"
                          >
                            <div
                              class="ant-rate-star-first"
                            >
                              <span
                                aria-label="star"
                                class="anticon anticon-star"
                                role="img"
                                style="max-width: 8px; min-width: 2px;"
                              >
                                <svg
                                  aria-hidden="true"
                                  class=""
                                  data-icon="star"
                                  fill="currentColor"
                                  focusable="false"
                                  height="1em"
                                  viewBox="64 64 896 896"
                                  width="1em"
                                >
                                  <path
                                    d="M908.1 353.1l-253.9-36.9L540.7 86.1c-3.1-6.3-8.2-11.4-14.5-14.5-15.8-7.8-35-1.3-42.9 14.5L369.8 316.2l-253.9 36.9c-7 1-13.4 4.3-18.3 9.3a32.05 32.05 0 00.6 45.3l183.7 179.1-43.4 252.9a31.95 31.95 0 0046.4 33.7L512 754l227.1 119.4c6.2 3.3 13.4 4.4 20.3 3.2 17.4-3 29.1-19.5 26.1-36.9l-43.4-252.9 183.7-179.1c5-4.9 8.3-11.3 9.3-18.3 2.7-17.5-9.5-33.7-27-36.3z"
                                  />
                                </svg>
                              </span>
                            </div>
                            <div
                              class="ant-rate-star-second"
                            >
                              <span
                                aria-label="star"
                                class="anticon anticon-star"
                                role="img"
                                style="max-width: 8px; min-width: 2px;"
                              >
                                <svg
                                  aria-hidden="true"
                                  class=""
                                  data-icon="star"
                                  fill="currentColor"
                                  focusable="false"
                                  height="1em"
                                  viewBox="64 64 896 896"
                                  width="1em"
                                >
                                  <path
                                    d="M908.1 353.1l-253.9-36.9L540.7 86.1c-3.1-6.3-8.2-11.4-14.5-14.5-15.8-7.8-35-1.3-42.9 14.5L369.8 316.2l-253.9 36.9c-7 1-13.4 4.3-18.3 9.3a32.05 32.05 0 00.6 45.3l183.7 179.1-43.4 252.9a31.95 31.95 0 0046.4 33.7L512 754l227.1 119.4c6.2 3.3 13.4 4.4 20.3 3.2 17.4-3 29.1-19.5 26.1-36.9l-43.4-252.9 183.7-179.1c5-4.9 8.3-11.3 9.3-18.3 2.7-17.5-9.5-33.7-27-36.3z"
                                  />
                                </svg>
                              </span>
                            </div>
                          </div>
                        </li>
                        <li
                          class="ant-rate-star ant-rate-star-zero"
                        >
                          <div
                            aria-checked="true"
                            aria-posinset="5"
                            aria-setsize="5"
                            role="radio"
                            tabindex="-1"
                          >
                            <div
                              class="ant-rate-star-first"
                            >
                              <span
                                aria-label="star"
                                class="anticon anticon-star"
                                role="img"
                                style="max-width: 8px; min-width: 2px;"
                              >
                                <svg
                                  aria-hidden="true"
                                  class=""
                                  data-icon="star"
                                  fill="currentColor"
                                  focusable="false"
                                  height="1em"
                                  viewBox="64 64 896 896"
                                  width="1em"
                                >
                                  <path
                                    d="M908.1 353.1l-253.9-36.9L540.7 86.1c-3.1-6.3-8.2-11.4-14.5-14.5-15.8-7.8-35-1.3-42.9 14.5L369.8 316.2l-253.9 36.9c-7 1-13.4 4.3-18.3 9.3a32.05 32.05 0 00.6 45.3l183.7 179.1-43.4 252.9a31.95 31.95 0 0046.4 33.7L512 754l227.1 119.4c6.2 3.3 13.4 4.4 20.3 3.2 17.4-3 29.1-19.5 26.1-36.9l-43.4-252.9 183.7-179.1c5-4.9 8.3-11.3 9.3-18.3 2.7-17.5-9.5-33.7-27-36.3z"
                                  />
                                </svg>
                              </span>
                            </div>
                            <div
                              class="ant-rate-star-second"
                            >
                              <span
                                aria-label="star"
                                class="anticon anticon-star"
                                role="img"
                                style="max-width: 8px; min-width: 2px;"
                              >
                                <svg
                                  aria-hidden="true"
                                  class=""
                                  data-icon="star"
                                  fill="currentColor"
                                  focusable="false"
                                  height="1em"
                                  viewBox="64 64 896 896"
                                  width="1em"
                                >
                                  <path
                                    d="M908.1 353.1l-253.9-36.9L540.7 86.1c-3.1-6.3-8.2-11.4-14.5-14.5-15.8-7.8-35-1.3-42.9 14.5L369.8 316.2l-253.9 36.9c-7 1-13.4 4.3-18.3 9.3a32.05 32.05 0 00.6 45.3l183.7 179.1-43.4 252.9a31.95 31.95 0 0046.4 33.7L512 754l227.1 119.4c6.2 3.3 13.4 4.4 20.3 3.2 17.4-3 29.1-19.5 26.1-36.9l-43.4-252.9 183.7-179.1c5-4.9 8.3-11.3 9.3-18.3 2.7-17.5-9.5-33.7-27-36.3z"
                                  />
                                </svg>
                              </span>
                            </div>
                          </div>
                        </li>
                      </ul>
                    </div>
                  </div>
                </a>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Pages Snapshot render favorite page 1`] = `
<div
  style={
    Object {
      "padding": "10px 20px",
    }
  }
>
  <div
    className="ant-card ant-card-bordered"
    style={
      Object {
        "minHeight": "75vh",
      }
    }
  >
    <div
      className="ant-card-head"
      style={Object {}}
    >
      <div
        className="ant-card-head-wrapper"
      >
        <div
          className="ant-card-head-title"
        >
          Favorite Movie
        </div>
      </div>
    </div>
    <div
      className="ant-card-body"
      style={Object {}}
    >
      <div
        className="ant-row ant-row-center"
        data-testid="favorite-list"
        style={
          Object {
            "marginBottom": 2.5,
            "marginLeft": -2.5,
            "marginRight": -2.5,
            "marginTop": -2.5,
          }
        }
      >
        <div
          className="ant-empty"
        >
          <div
            className="ant-empty-image"
          >
            <svg
              className="ant-empty-img-default"
              height="152"
              viewBox="0 0 184 152"
              width="184"
              xmlns="http://www.w3.org/2000/svg"
            >
              <g
                fill="none"
                fillRule="evenodd"
              >
                <g
                  transform="translate(24 31.67)"
                >
                  <ellipse
                    className="ant-empty-img-default-ellipse"
                    cx="67.797"
                    cy="106.89"
                    rx="67.797"
                    ry="12.668"
                  />
                  <path
                    className="ant-empty-img-default-path-1"
                    d="M122.034 69.674L98.109 40.229c-1.148-1.386-2.826-2.225-4.593-2.225h-51.44c-1.766 0-3.444.839-4.592 2.225L13.56 69.674v15.383h108.475V69.674z"
                  />
                  <path
                    className="ant-empty-img-default-path-2"
                    d="M101.537 86.214L80.63 61.102c-1.001-1.207-2.507-1.867-4.048-1.867H31.724c-1.54 0-3.047.66-4.048 1.867L6.769 86.214v13.792h94.768V86.214z"
                    transform="translate(13.56)"
                  />
                  <path
                    className="ant-empty-img-default-path-3"
                    d="M33.83 0h67.933a4 4 0 0 1 4 4v93.344a4 4 0 0 1-4 4H33.83a4 4 0 0 1-4-4V4a4 4 0 0 1 4-4z"
                  />
                  <path
                    className="ant-empty-img-default-path-4"
                    d="M42.678 9.953h50.237a2 2 0 0 1 2 2V36.91a2 2 0 0 1-2 2H42.678a2 2 0 0 1-2-2V11.953a2 2 0 0 1 2-2zM42.94 49.767h49.713a2.262 2.262 0 1 1 0 4.524H42.94a2.262 2.262 0 0 1 0-4.524zM42.94 61.53h49.713a2.262 2.262 0 1 1 0 4.525H42.94a2.262 2.262 0 0 1 0-4.525zM121.813 105.032c-.775 3.071-3.497 5.36-6.735 5.36H20.515c-3.238 0-5.96-2.29-6.734-5.36a7.309 7.309 0 0 1-.222-1.79V69.675h26.318c2.907 0 5.25 2.448 5.25 5.42v.04c0 2.971 2.37 5.37 5.277 5.37h34.785c2.907 0 5.277-2.421 5.277-5.393V75.1c0-2.972 2.343-5.426 5.25-5.426h26.318v33.569c0 .617-.077 1.216-.221 1.789z"
                  />
                </g>
                <path
                  className="ant-empty-img-default-path-5"
                  d="M149.121 33.292l-6.83 2.65a1 1 0 0 1-1.317-1.23l1.937-6.207c-2.589-2.944-4.109-6.534-4.109-10.408C138.802 8.102 148.92 0 161.402 0 173.881 0 184 8.102 184 18.097c0 9.995-10.118 18.097-22.599 18.097-4.528 0-8.744-1.066-12.28-2.902z"
                />
                <g
                  className="ant-empty-img-default-g"
                  transform="translate(149.65 15.383)"
                >
                  <ellipse
                    cx="20.654"
                    cy="3.167"
                    rx="2.849"
                    ry="2.815"
                  />
                  <path
                    d="M5.698 5.63H0L2.898.704zM9.259.704h4.985V5.63H9.259z"
                  />
                </g>
              </g>
            </svg>
          </div>
          <p
            className="ant-empty-description"
          >
            No Favorite Movie
          </p>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Pages Snapshot render home page 1`] = `
<div
  className="ant-row"
  style={
    Object {
      "marginBottom": 5,
      "marginLeft": -5,
      "marginRight": -5,
      "marginTop": -5,
      "padding": "10px 20px",
    }
  }
>
  <div
    className="ant-col ant-col-xs-24 ant-col-sm-24 ant-col-md-24 ant-col-lg-5 ant-col-xl-4 ant-col-xxl-4"
    style={
      Object {
        "paddingBottom": 5,
        "paddingLeft": 5,
        "paddingRight": 5,
        "paddingTop": 5,
      }
    }
  >
    <div
      className="ant-card ant-card-bordered"
    >
      <div
        className="ant-card-head"
        style={Object {}}
      >
        <div
          className="ant-card-head-wrapper"
        >
          <div
            className="ant-card-head-title"
          >
            <h4
              className="ant-typography"
              style={
                Object {
                  "WebkitLineClamp": null,
                  "margin": 0,
                }
              }
            >
              <span
                aria-label="filter"
                className="anticon anticon-filter"
                role="img"
              >
                <svg
                  aria-hidden="true"
                  className=""
                  data-icon="filter"
                  fill="currentColor"
                  focusable="false"
                  height="1em"
                  viewBox="64 64 896 896"
                  width="1em"
                >
                  <path
                    d="M880.1 154H143.9c-24.5 0-39.8 26.7-27.5 48L349 597.4V838c0 17.7 14.2 32 31.8 32h262.4c17.6 0 31.8-14.3 31.8-32V597.4L907.7 202c12.2-21.3-3.1-48-27.6-48zM603.4 798H420.6V642h182.9v156zm9.6-236.6l-9.5 16.6h-183l-9.5-16.6L212.7 226h598.6L613 561.4z"
                  />
                </svg>
              </span>
               Discover
            </h4>
          </div>
        </div>
      </div>
      <div
        className="ant-card-body"
        style={Object {}}
      >
        <ul
          className="ant-menu ant-menu-light ant-menu-root ant-menu-inline"
          onMouseEnter={[Function]}
          onTransitionEnd={[Function]}
          role="menu"
          style={Object {}}
        >
          <div />
          <li
            className="ant-menu-submenu ant-menu-submenu-inline"
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            role="menuitem"
          >
            <div
              aria-expanded={false}
              aria-haspopup="true"
              className="ant-menu-submenu-title"
              onClick={[Function]}
              onMouseEnter={[Function]}
              onMouseLeave={[Function]}
              role="button"
              style={
                Object {
                  "paddingLeft": 24,
                }
              }
              title="Sort By"
            >
              Sort By
              <i
                className="ant-menu-submenu-arrow"
              />
            </div>
            <div />
          </li>
          <li
            className="ant-menu-submenu ant-menu-submenu-inline ant-menu-submenu-disabled"
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            role="menuitem"
          >
            <div
              aria-expanded={false}
              aria-haspopup="true"
              className="ant-menu-submenu-title"
              role="button"
              style={
                Object {
                  "paddingLeft": 24,
                }
              }
            >
              <span>
                Select Genre
              </span>
              <i
                className="ant-menu-submenu-arrow"
              />
            </div>
            <div />
          </li>
        </ul>
      </div>
    </div>
  </div>
  <div
    className="ant-col ant-col-xs-24 ant-col-sm-24 ant-col-md-24 ant-col-lg-19 ant-col-xl-20 ant-col-xxl-20"
    style={
      Object {
        "paddingBottom": 5,
        "paddingLeft": 5,
        "paddingRight": 5,
        "paddingTop": 5,
      }
    }
  >
    <div
      className="ant-card display-movie-list ant-card-bordered"
    >
      <div
        className="ant-card-body"
        style={Object {}}
      >
        <div
          className="ant-row ant-row-center"
          style={
            Object {
              "marginBottom": 5,
              "marginLeft": -5,
              "marginRight": -5,
              "marginTop": -5,
            }
          }
        >
          <div
            className="ant-spin ant-spin-lg ant-spin-spinning ant-spin-show-text"
          >
            <span
              className="ant-spin-dot ant-spin-dot-spin"
            >
              <i
                className="ant-spin-dot-item"
              />
              <i
                className="ant-spin-dot-item"
              />
              <i
                className="ant-spin-dot-item"
              />
              <i
                className="ant-spin-dot-item"
              />
            </span>
            <div
              className="ant-spin-text"
            >
              Loading...
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Pages Snapshot render main container 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <header
        class="ant-layout-header"
        style="padding: 0px;"
      >
        <header
          class="ant-layout-header nav-bar"
        >
          <div
            class="ant-row ant-row-space-between"
          >
            <div
              class="ant-col"
              style="display: flex; align-items: center;"
            >
              <h1
                class="ant-typography"
                style="margin: 0px;"
              >
                <span
                  aria-label="play-circle"
                  class="anticon anticon-play-circle"
                  role="img"
                >
                  <svg
                    aria-hidden="true"
                    class=""
                    data-icon="play-circle"
                    fill="currentColor"
                    focusable="false"
                    height="1em"
                    viewBox="64 64 896 896"
                    width="1em"
                  >
                    <path
                      d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm0 820c-205.4 0-372-166.6-372-372s166.6-372 372-372 372 166.6 372 372-166.6 372-372 372z"
                    />
                    <path
                      d="M719.4 499.1l-296.1-215A15.9 15.9 0 00398 297v430c0 13.1 14.8 20.5 25.3 12.9l296.1-215a15.9 15.9 0 000-25.8zm-257.6 134V390.9L628.5 512 461.8 633.1z"
                    />
                  </svg>
                </span>
                Movie
              </h1>
            </div>
            <div
              class="ant-col ant-col-xs-1 ant-col-sm-9 ant-col-md-8 ant-col-lg-6 ant-col-xl-5 ant-col-xxl-4"
            >
              <ul
                class="ant-menu nav-menu ant-menu-light ant-menu-root ant-menu-horizontal"
                role="menu"
              >
                <li
                  class="ant-menu-submenu ant-menu-submenu-horizontal ant-menu-overflowed-submenu"
                  role="menuitem"
                  style="flex: 1; display: none; justify-content: center;"
                >
                  <div
                    aria-expanded="false"
                    aria-haspopup="true"
                    class="ant-menu-submenu-title"
                    role="button"
                  >
                    <span
                      aria-label="menu"
                      class="anticon anticon-menu"
                      role="img"
                      style="font-size: 16px;"
                    >
                      <svg
                        aria-hidden="true"
                        class=""
                        data-icon="menu"
                        fill="currentColor"
                        focusable="false"
                        height="1em"
                        viewBox="64 64 896 896"
                        width="1em"
                      >
                        <path
                          d="M904 160H120c-4.4 0-8 3.6-8 8v64c0 4.4 3.6 8 8 8h784c4.4 0 8-3.6 8-8v-64c0-4.4-3.6-8-8-8zm0 624H120c-4.4 0-8 3.6-8 8v64c0 4.4 3.6 8 8 8h784c4.4 0 8-3.6 8-8v-64c0-4.4-3.6-8-8-8zm0-312H120c-4.4 0-8 3.6-8 8v64c0 4.4 3.6 8 8 8h784c4.4 0 8-3.6 8-8v-64c0-4.4-3.6-8-8-8z"
                        />
                      </svg>
                    </span>
                    <i
                      class="ant-menu-submenu-arrow"
                    />
                  </div>
                </li>
                <li
                  class="ant-menu-item ant-menu-item-selected"
                  role="menuitem"
                  style="flex: 1; display: flex; justify-content: center;"
                >
                  <a
                    href="/"
                  >
                    Home
                  </a>
                  
                </li>
                <li
                  class="ant-menu-submenu ant-menu-submenu-horizontal ant-menu-overflowed-submenu"
                  role="menuitem"
                  style="flex: 1; display: none; justify-content: center;"
                >
                  <div
                    aria-expanded="false"
                    aria-haspopup="true"
                    class="ant-menu-submenu-title"
                    role="button"
                  >
                    <span
                      aria-label="menu"
                      class="anticon anticon-menu"
                      role="img"
                      style="font-size: 16px;"
                    >
                      <svg
                        aria-hidden="true"
                        class=""
                        data-icon="menu"
                        fill="currentColor"
                        focusable="false"
                        height="1em"
                        viewBox="64 64 896 896"
                        width="1em"
                      >
                        <path
                          d="M904 160H120c-4.4 0-8 3.6-8 8v64c0 4.4 3.6 8 8 8h784c4.4 0 8-3.6 8-8v-64c0-4.4-3.6-8-8-8zm0 624H120c-4.4 0-8 3.6-8 8v64c0 4.4 3.6 8 8 8h784c4.4 0 8-3.6 8-8v-64c0-4.4-3.6-8-8-8zm0-312H120c-4.4 0-8 3.6-8 8v64c0 4.4 3.6 8 8 8h784c4.4 0 8-3.6 8-8v-64c0-4.4-3.6-8-8-8z"
                        />
                      </svg>
                    </span>
                    <i
                      class="ant-menu-submenu-arrow"
                    />
                  </div>
                </li>
                <li
                  class="ant-menu-item"
                  role="menuitem"
                  style="flex: 1; display: flex; justify-content: center;"
                >
                  <a
                    href="/favorites"
                  >
                    Favorites
                  </a>
                  <span
                    class="ant-typography"
                  >
                    (
                    0
                    )
                  </span>
                </li>
                <li
                  class="ant-menu-submenu ant-menu-submenu-horizontal ant-menu-overflowed-submenu"
                  role="menuitem"
                  style="flex: 1; display: none; justify-content: center; visibility: hidden; position: absolute;"
                >
                  <div
                    aria-expanded="false"
                    aria-haspopup="true"
                    class="ant-menu-submenu-title"
                    role="button"
                  >
                    <span
                      aria-label="menu"
                      class="anticon anticon-menu"
                      role="img"
                      style="font-size: 16px;"
                    >
                      <svg
                        aria-hidden="true"
                        class=""
                        data-icon="menu"
                        fill="currentColor"
                        focusable="false"
                        height="1em"
                        viewBox="64 64 896 896"
                        width="1em"
                      >
                        <path
                          d="M904 160H120c-4.4 0-8 3.6-8 8v64c0 4.4 3.6 8 8 8h784c4.4 0 8-3.6 8-8v-64c0-4.4-3.6-8-8-8zm0 624H120c-4.4 0-8 3.6-8 8v64c0 4.4 3.6 8 8 8h784c4.4 0 8-3.6 8-8v-64c0-4.4-3.6-8-8-8zm0-312H120c-4.4 0-8 3.6-8 8v64c0 4.4 3.6 8 8 8h784c4.4 0 8-3.6 8-8v-64c0-4.4-3.6-8-8-8z"
                        />
                      </svg>
                    </span>
                    <i
                      class="ant-menu-submenu-arrow"
                    />
                  </div>
                </li>
              </ul>
            </div>
          </div>
        </header>
      </header>
      <main
        class="ant-layout-content"
      >
        <div
          class="ant-row"
          style="margin: -5px -5px 5px -5px; padding: 10px 20px;"
        >
          <div
            class="ant-col ant-col-xs-24 ant-col-sm-24 ant-col-md-24 ant-col-lg-5 ant-col-xl-4 ant-col-xxl-4"
            style="padding: 5px 5px 5px 5px;"
          >
            <div
              class="ant-card ant-card-bordered"
            >
              <div
                class="ant-card-head"
              >
                <div
                  class="ant-card-head-wrapper"
                >
                  <div
                    class="ant-card-head-title"
                  >
                    <h4
                      class="ant-typography"
                      style="margin: 0px;"
                    >
                      <span
                        aria-label="filter"
                        class="anticon anticon-filter"
                        role="img"
                      >
                        <svg
                          aria-hidden="true"
                          class=""
                          data-icon="filter"
                          fill="currentColor"
                          focusable="false"
                          height="1em"
                          viewBox="64 64 896 896"
                          width="1em"
                        >
                          <path
                            d="M880.1 154H143.9c-24.5 0-39.8 26.7-27.5 48L349 597.4V838c0 17.7 14.2 32 31.8 32h262.4c17.6 0 31.8-14.3 31.8-32V597.4L907.7 202c12.2-21.3-3.1-48-27.6-48zM603.4 798H420.6V642h182.9v156zm9.6-236.6l-9.5 16.6h-183l-9.5-16.6L212.7 226h598.6L613 561.4z"
                          />
                        </svg>
                      </span>
                       Discover
                    </h4>
                  </div>
                </div>
              </div>
              <div
                class="ant-card-body"
              >
                <ul
                  class="ant-menu ant-menu-light ant-menu-root ant-menu-inline"
                  role="menu"
                >
                  <div />
                  <li
                    class="ant-menu-submenu ant-menu-submenu-inline"
                    role="menuitem"
                  >
                    <div
                      aria-expanded="false"
                      aria-haspopup="true"
                      class="ant-menu-submenu-title"
                      role="button"
                      style="padding-left: 24px;"
                      title="Sort By"
                    >
                      Sort By
                      <i
                        class="ant-menu-submenu-arrow"
                      />
                    </div>
                    <div />
                  </li>
                  <li
                    class="ant-menu-submenu ant-menu-submenu-inline ant-menu-submenu-disabled"
                    role="menuitem"
                  >
                    <div
                      aria-expanded="false"
                      aria-haspopup="true"
                      class="ant-menu-submenu-title"
                      role="button"
                      style="padding-left: 24px;"
                    >
                      <span>
                        Select Genre
                      </span>
                      <i
                        class="ant-menu-submenu-arrow"
                      />
                    </div>
                    <div />
                  </li>
                </ul>
              </div>
            </div>
          </div>
          <div
            class="ant-col ant-col-xs-24 ant-col-sm-24 ant-col-md-24 ant-col-lg-19 ant-col-xl-20 ant-col-xxl-20"
            style="padding: 5px 5px 5px 5px;"
          >
            <div
              class="ant-card display-movie-list ant-card-bordered"
            >
              <div
                class="ant-card-body"
              >
                <div
                  class="ant-row ant-row-center"
                  style="margin: -5px -5px 5px -5px;"
                >
                  <div
                    class="ant-spin ant-spin-lg ant-spin-spinning ant-spin-show-text"
                  >
                    <span
                      class="ant-spin-dot ant-spin-dot-spin"
                    >
                      <i
                        class="ant-spin-dot-item"
                      />
                      <i
                        class="ant-spin-dot-item"
                      />
                      <i
                        class="ant-spin-dot-item"
                      />
                      <i
                        class="ant-spin-dot-item"
                      />
                    </span>
                    <div
                      class="ant-spin-text"
                    >
                      Loading...
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </main>
      <footer
        class="ant-layout-footer"
      >
        Footer
      </footer>
    </div>
  </body>,
  "container": <div>
    <header
      class="ant-layout-header"
      style="padding: 0px;"
    >
      <header
        class="ant-layout-header nav-bar"
      >
        <div
          class="ant-row ant-row-space-between"
        >
          <div
            class="ant-col"
            style="display: flex; align-items: center;"
          >
            <h1
              class="ant-typography"
              style="margin: 0px;"
            >
              <span
                aria-label="play-circle"
                class="anticon anticon-play-circle"
                role="img"
              >
                <svg
                  aria-hidden="true"
                  class=""
                  data-icon="play-circle"
                  fill="currentColor"
                  focusable="false"
                  height="1em"
                  viewBox="64 64 896 896"
                  width="1em"
                >
                  <path
                    d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm0 820c-205.4 0-372-166.6-372-372s166.6-372 372-372 372 166.6 372 372-166.6 372-372 372z"
                  />
                  <path
                    d="M719.4 499.1l-296.1-215A15.9 15.9 0 00398 297v430c0 13.1 14.8 20.5 25.3 12.9l296.1-215a15.9 15.9 0 000-25.8zm-257.6 134V390.9L628.5 512 461.8 633.1z"
                  />
                </svg>
              </span>
              Movie
            </h1>
          </div>
          <div
            class="ant-col ant-col-xs-1 ant-col-sm-9 ant-col-md-8 ant-col-lg-6 ant-col-xl-5 ant-col-xxl-4"
          >
            <ul
              class="ant-menu nav-menu ant-menu-light ant-menu-root ant-menu-horizontal"
              role="menu"
            >
              <li
                class="ant-menu-submenu ant-menu-submenu-horizontal ant-menu-overflowed-submenu"
                role="menuitem"
                style="flex: 1; display: none; justify-content: center;"
              >
                <div
                  aria-expanded="false"
                  aria-haspopup="true"
                  class="ant-menu-submenu-title"
                  role="button"
                >
                  <span
                    aria-label="menu"
                    class="anticon anticon-menu"
                    role="img"
                    style="font-size: 16px;"
                  >
                    <svg
                      aria-hidden="true"
                      class=""
                      data-icon="menu"
                      fill="currentColor"
                      focusable="false"
                      height="1em"
                      viewBox="64 64 896 896"
                      width="1em"
                    >
                      <path
                        d="M904 160H120c-4.4 0-8 3.6-8 8v64c0 4.4 3.6 8 8 8h784c4.4 0 8-3.6 8-8v-64c0-4.4-3.6-8-8-8zm0 624H120c-4.4 0-8 3.6-8 8v64c0 4.4 3.6 8 8 8h784c4.4 0 8-3.6 8-8v-64c0-4.4-3.6-8-8-8zm0-312H120c-4.4 0-8 3.6-8 8v64c0 4.4 3.6 8 8 8h784c4.4 0 8-3.6 8-8v-64c0-4.4-3.6-8-8-8z"
                      />
                    </svg>
                  </span>
                  <i
                    class="ant-menu-submenu-arrow"
                  />
                </div>
              </li>
              <li
                class="ant-menu-item ant-menu-item-selected"
                role="menuitem"
                style="flex: 1; display: flex; justify-content: center;"
              >
                <a
                  href="/"
                >
                  Home
                </a>
                
              </li>
              <li
                class="ant-menu-submenu ant-menu-submenu-horizontal ant-menu-overflowed-submenu"
                role="menuitem"
                style="flex: 1; display: none; justify-content: center;"
              >
                <div
                  aria-expanded="false"
                  aria-haspopup="true"
                  class="ant-menu-submenu-title"
                  role="button"
                >
                  <span
                    aria-label="menu"
                    class="anticon anticon-menu"
                    role="img"
                    style="font-size: 16px;"
                  >
                    <svg
                      aria-hidden="true"
                      class=""
                      data-icon="menu"
                      fill="currentColor"
                      focusable="false"
                      height="1em"
                      viewBox="64 64 896 896"
                      width="1em"
                    >
                      <path
                        d="M904 160H120c-4.4 0-8 3.6-8 8v64c0 4.4 3.6 8 8 8h784c4.4 0 8-3.6 8-8v-64c0-4.4-3.6-8-8-8zm0 624H120c-4.4 0-8 3.6-8 8v64c0 4.4 3.6 8 8 8h784c4.4 0 8-3.6 8-8v-64c0-4.4-3.6-8-8-8zm0-312H120c-4.4 0-8 3.6-8 8v64c0 4.4 3.6 8 8 8h784c4.4 0 8-3.6 8-8v-64c0-4.4-3.6-8-8-8z"
                      />
                    </svg>
                  </span>
                  <i
                    class="ant-menu-submenu-arrow"
                  />
                </div>
              </li>
              <li
                class="ant-menu-item"
                role="menuitem"
                style="flex: 1; display: flex; justify-content: center;"
              >
                <a
                  href="/favorites"
                >
                  Favorites
                </a>
                <span
                  class="ant-typography"
                >
                  (
                  0
                  )
                </span>
              </li>
              <li
                class="ant-menu-submenu ant-menu-submenu-horizontal ant-menu-overflowed-submenu"
                role="menuitem"
                style="flex: 1; display: none; justify-content: center; visibility: hidden; position: absolute;"
              >
                <div
                  aria-expanded="false"
                  aria-haspopup="true"
                  class="ant-menu-submenu-title"
                  role="button"
                >
                  <span
                    aria-label="menu"
                    class="anticon anticon-menu"
                    role="img"
                    style="font-size: 16px;"
                  >
                    <svg
                      aria-hidden="true"
                      class=""
                      data-icon="menu"
                      fill="currentColor"
                      focusable="false"
                      height="1em"
                      viewBox="64 64 896 896"
                      width="1em"
                    >
                      <path
                        d="M904 160H120c-4.4 0-8 3.6-8 8v64c0 4.4 3.6 8 8 8h784c4.4 0 8-3.6 8-8v-64c0-4.4-3.6-8-8-8zm0 624H120c-4.4 0-8 3.6-8 8v64c0 4.4 3.6 8 8 8h784c4.4 0 8-3.6 8-8v-64c0-4.4-3.6-8-8-8zm0-312H120c-4.4 0-8 3.6-8 8v64c0 4.4 3.6 8 8 8h784c4.4 0 8-3.6 8-8v-64c0-4.4-3.6-8-8-8z"
                      />
                    </svg>
                  </span>
                  <i
                    class="ant-menu-submenu-arrow"
                  />
                </div>
              </li>
            </ul>
          </div>
        </div>
      </header>
    </header>
    <main
      class="ant-layout-content"
    >
      <div
        class="ant-row"
        style="margin: -5px -5px 5px -5px; padding: 10px 20px;"
      >
        <div
          class="ant-col ant-col-xs-24 ant-col-sm-24 ant-col-md-24 ant-col-lg-5 ant-col-xl-4 ant-col-xxl-4"
          style="padding: 5px 5px 5px 5px;"
        >
          <div
            class="ant-card ant-card-bordered"
          >
            <div
              class="ant-card-head"
            >
              <div
                class="ant-card-head-wrapper"
              >
                <div
                  class="ant-card-head-title"
                >
                  <h4
                    class="ant-typography"
                    style="margin: 0px;"
                  >
                    <span
                      aria-label="filter"
                      class="anticon anticon-filter"
                      role="img"
                    >
                      <svg
                        aria-hidden="true"
                        class=""
                        data-icon="filter"
                        fill="currentColor"
                        focusable="false"
                        height="1em"
                        viewBox="64 64 896 896"
                        width="1em"
                      >
                        <path
                          d="M880.1 154H143.9c-24.5 0-39.8 26.7-27.5 48L349 597.4V838c0 17.7 14.2 32 31.8 32h262.4c17.6 0 31.8-14.3 31.8-32V597.4L907.7 202c12.2-21.3-3.1-48-27.6-48zM603.4 798H420.6V642h182.9v156zm9.6-236.6l-9.5 16.6h-183l-9.5-16.6L212.7 226h598.6L613 561.4z"
                        />
                      </svg>
                    </span>
                     Discover
                  </h4>
                </div>
              </div>
            </div>
            <div
              class="ant-card-body"
            >
              <ul
                class="ant-menu ant-menu-light ant-menu-root ant-menu-inline"
                role="menu"
              >
                <div />
                <li
                  class="ant-menu-submenu ant-menu-submenu-inline"
                  role="menuitem"
                >
                  <div
                    aria-expanded="false"
                    aria-haspopup="true"
                    class="ant-menu-submenu-title"
                    role="button"
                    style="padding-left: 24px;"
                    title="Sort By"
                  >
                    Sort By
                    <i
                      class="ant-menu-submenu-arrow"
                    />
                  </div>
                  <div />
                </li>
                <li
                  class="ant-menu-submenu ant-menu-submenu-inline ant-menu-submenu-disabled"
                  role="menuitem"
                >
                  <div
                    aria-expanded="false"
                    aria-haspopup="true"
                    class="ant-menu-submenu-title"
                    role="button"
                    style="padding-left: 24px;"
                  >
                    <span>
                      Select Genre
                    </span>
                    <i
                      class="ant-menu-submenu-arrow"
                    />
                  </div>
                  <div />
                </li>
              </ul>
            </div>
          </div>
        </div>
        <div
          class="ant-col ant-col-xs-24 ant-col-sm-24 ant-col-md-24 ant-col-lg-19 ant-col-xl-20 ant-col-xxl-20"
          style="padding: 5px 5px 5px 5px;"
        >
          <div
            class="ant-card display-movie-list ant-card-bordered"
          >
            <div
              class="ant-card-body"
            >
              <div
                class="ant-row ant-row-center"
                style="margin: -5px -5px 5px -5px;"
              >
                <div
                  class="ant-spin ant-spin-lg ant-spin-spinning ant-spin-show-text"
                >
                  <span
                    class="ant-spin-dot ant-spin-dot-spin"
                  >
                    <i
                      class="ant-spin-dot-item"
                    />
                    <i
                      class="ant-spin-dot-item"
                    />
                    <i
                      class="ant-spin-dot-item"
                    />
                    <i
                      class="ant-spin-dot-item"
                    />
                  </span>
                  <div
                    class="ant-spin-text"
                  >
                    Loading...
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </main>
    <footer
      class="ant-layout-footer"
    >
      Footer
    </footer>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Pages Snapshot render movie detail page 1`] = `
<div
  className="movie-detail-container"
>
  <div
    className="ant-spin ant-spin-lg ant-spin-spinning ant-spin-show-text"
  >
    <span
      className="ant-spin-dot ant-spin-dot-spin"
    >
      <i
        className="ant-spin-dot-item"
      />
      <i
        className="ant-spin-dot-item"
      />
      <i
        className="ant-spin-dot-item"
      />
      <i
        className="ant-spin-dot-item"
      />
    </span>
    <div
      className="ant-spin-text"
    >
      Loading...
    </div>
  </div>
</div>
`;
